force-app/main/default/objects/Main_Business_Income__c/Main_Business_Income__c.object-meta.xml
<CustomObject>
    <label>Main Bussiness Income</label>
    <nameField>
        <displayFormat>MBI-{00000}</displayFormat>
        <label>Main Bussiness Income Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Main Bussiness Income</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>