force-app/main/default/objects/Main_Business_Income__c/fields/Annual__c.field-meta.xml
<CustomField>
    <fullName>Annual__c</fullName>
    <label>Annual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>