force-app/main/default/objects/Main_Business_Income__c/fields/Header_Text__c.field-meta.xml
<CustomField>
    <fullName>Header_Text__c</fullName>
    <description>Header Text</description>
    <label>Header Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>