force-app/main/default/objects/Main_Business_Income__c/fields/Post_Date__c.field-meta.xml
<CustomField>
    <fullName>Post_Date__c</fullName>
    <description>Post Date</description>
    <label>Post Date</label>
    <type>Date</type>
</CustomField>