force-app/main/default/objects/Main_Business_Income__c/fields/Post_Time__c.field-meta.xml
<CustomField>
    <fullName>Post_Time__c</fullName>
    <description>Post Time</description>
    <label>Post Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>