force-app/main/default/objects/Main_Business_Income__c/fields/Voucher_Number__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Number__c</fullName>
    <description>Voucher Number</description>
    <label>Voucher Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>