force-app/main/default/objects/Main_Business_Income__c/fields/Voucher_Type__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Type__c</fullName>
    <description>Voucher Type</description>
    <label>Voucher Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>