force-app/main/default/objects/Main_Business_Income__c/fields/Write_off_Annual__c.field-meta.xml
<CustomField>
    <fullName>Write_off_Annual__c</fullName>
    <description>Write-off Annual</description>
    <label>Write-off Annual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>