force-app/main/default/objects/Main_Business_Income__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Company_Code__c</columns>
    <columns>Voucher_Number__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Post_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>